@@ -21,6 +21,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/
 ### Removed
 
 - O comando `/deletar` foi _deletado_. Para fazer um pedido de deleção de conta, envie um email para `support@menherabot.xyz`
+- O comando `/adicionar` foi removido. Você poder adicionar a Menhera diretamente do perfil dela agora!
 
 ## [3.5.0] 2021-11-15
 
